--- a/01_Undervisningsnotater/4.-Tester-og-løkker/Løkke-eksempler.ipynb
+++ b/01_Undervisningsnotater/4.-Tester-og-løkker/Løkke-eksempler.ipynb
@@ -193,42 +193,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!conda update --yes --all"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Rekker\n",
+    "$$1+\\frac23+\\frac49+\\frac{8}{27}+...$$\n",
+    "\n",
+    "Finn summen av den geometriske rekken over\n",
+    "\n",
+    "$$\\sum_0^\\infty (\\frac23)^n$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solving environment: done\n",
-      "\n",
-      "## Package Plan ##\n",
-      "\n",
-      "  environment location: /Users/madsor/anaconda3\n",
-      "\n",
-      "\n",
-      "The following packages will be downloaded:\n",
-      "\n",
-      "    package                    |            build\n",
-      "    ---------------------------|-----------------\n",
-      "    jupyter-1.0.0              |           py36_7           6 KB\n",
-      "\n",
-      "The following packages will be UPDATED:\n",
-      "\n",
-      "    jupyter: 1.0.0-py36_6 --> 1.0.0-py36_7\n",
-      "\n",
-      "\n",
-      "Downloading and Extracting Packages\n",
-      "jupyter-1.0.0        | 6 KB      | ##################################### | 100% \n",
-      "Preparing transaction: done\n",
-      "Verifying transaction: done\n",
-      "Executing transaction: done\n"
+      "3.0000000000\n"
      ]
     }
    ],
    "source": [
-    "!conda update --yes --all"
+    "N = 100 #Antall tall i rekken vi summerer\n",
+    "sum = 0\n",
+    "for n in range(0, N, 1):\n",
+    "    sum += (2/3)**n\n",
+    "\n",
+    "print(f'{sum:.10f}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Nestede løkker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ytre løkke\n",
+      "  indre løkke\n",
+      "  indre løkke\n",
+      "  indre løkke\n",
+      "ytre løkke\n",
+      "  indre løkke\n",
+      "  indre løkke\n",
+      "  indre løkke\n",
+      "ytre løkke\n",
+      "  indre løkke\n",
+      "  indre løkke\n",
+      "  indre løkke\n",
+      "ytre løkke\n",
+      "  indre løkke\n",
+      "  indre løkke\n",
+      "  indre løkke\n",
+      "ytre løkke\n",
+      "  indre løkke\n",
+      "  indre løkke\n",
+      "  indre løkke\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print('ytre løkke')\n",
+    "    for j in range(3):\n",
+    "        print('  indre løkke')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
