--- a/02_Oppgaver/Oppgaver-fra-boka/4_Tester_og_løkker_oppgaver.ipynb
+++ b/02_Oppgaver/Oppgaver-fra-boka/4_Tester_og_løkker_oppgaver.ipynb
@@ -871,10 +871,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 13.5 s, sys: 107 ms, total: 13.6 s\n",
+      "Wall time: 14.1 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "def fibo(n):\n",
+    "    k_n_minus1 = 1 # n = 1 (k_1)\n",
+    "    k_n_minus2 = 1 # n = 2 (k_2)\n",
+    "    \n",
+    "    \n",
+    "    for n in range(n-2):\n",
+    "        k_n = k_n_minus2 + k_n_minus1  # k_n = k_n-2 + k_n-1 \n",
+    "        k_n_minus2 = k_n_minus1        # Forskyver et steg\n",
+    "        k_n_minus1 = k_n               # Forskyver et steg\n",
+    "    \n",
+    "    return k_n\n",
+    "\n",
+    "fibo(1000000)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1289,7 +1313,7 @@
     "\n",
     "Newtons binomialformel forteller oss hvordan en kan regne ut $(a + b)^n$ for et heltall $n$ og vilkårlige tallverdier $a$ og $b$. Den sier at\n",
     "\n",
-    "$$(a+b)^2 = \\sum_{r=0}^n\\binom{n}{r}a^{n-r}b^r$$\n",
+    "$$(a+b)^n = \\sum_{r=0}^n\\binom{n}{r}a^{n-r}b^r$$\n",
     "\n",
     "der $\\binom{n}{r}=\\frac{n!}{r!(n-r)!}$. For eksempel hvis $n=4$, så er\n",
     "\n",
@@ -1327,7 +1351,7 @@
     "\n",
     "Verdiene til den $n$-te raden i trekanten kan finnes ved:\n",
     "\n",
-    "$$\\binom{n}{0} \\hskip 0.5em \\binom{n}{1} \\hskip 0.5em \\binom{n}{2} \\hskip 0.5em \\cdot\\cdot\\cdot \\hskip 0.5em \\binom{n}{n-2} \\hskip 0.5em \\binom{n}{n-1} \\hskip 0.5em \\binom{n}{n}$$\n",
+    "$$\\binom{n}{0}, \\hskip 0.5em \\binom{n}{1}, \\hskip 0.5em \\binom{n}{2}, \\hskip 0.5em \\cdot\\cdot\\cdot \\hskip 0.5em \\binom{n}{n-2}, \\hskip 0.5em \\binom{n}{n-1}, \\hskip 0.5em \\binom{n}{n}$$\n",
     "\n",
     "der $\\binom{n}{r}=\\frac{n!}{r!(n-r)!}$ for heltall r og n.\n",
     "\n",
