--- a/01_Undervisningsnotater/5.-Lister-og-plotting/plotly.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/plotly.ipynb
@@ -21,8 +21,19 @@
     "\n",
     "<img src='settings.png' width='200px' style='float:left'>\n",
     "<img src='extention_manager.png' width='600px'>\n",
+    ".\n",
+    "\n",
+    "5. Søk på plotly i Extention Manager\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
+    "6. Legg til plotly \n",
+    "\n",
+    "<img src='anaconda.png'>\n",
+    "\n",
+    "\n",
+    "6. \n",
     "\n"
    ]
   },
