--- a/01_Undervisningsnotater/5.-Lister-og-plotting/plotly.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/plotly.ipynb
@@ -17,7 +17,7 @@
     "conda update --all\n",
     "```\n",
     "\n",
-    "3. Aktiver Extention Manager\n",
+    "3. Aktiver Extension Manager\n",
     "\n",
     "<img src='settings.png' width='200px' style='float:left'>\n",
     "<img src='extention_manager.png' width='600px'>\n",
@@ -25,8 +25,10 @@
     "\n",
     "5. Søk på plotly i Extention Manager\n",
     "\n",
+    "<img src='plotly.png' width='200px' >\n",
     "\n",
     "\n",
+    "Installer plotly-extension og plotlywidget\n",
     "\n",
     "6. Legg til plotly \n",
     "\n",
