--- a/01_Undervisningsnotater/5.-Lister-og-plotting/plotly.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/plotly.ipynb
@@ -28,14 +28,15 @@
     "<img src='plotly.png' width='200px' >\n",
     "\n",
     "\n",
-    "Installer plotly-extension og plotlywidget\n",
+    "Installer plotly-extension\n",
     "\n",
     "6. Legg til plotly \n",
     "\n",
     "<img src='anaconda.png'>\n",
     "\n",
     "\n",
-    "6. \n",
+    "6. Terminal:\n",
+    "\n",
     "\n"
    ]
   },
