--- a/01_Undervisningsnotater/5.-Lister-og-plotting/plotly.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/plotly.ipynb
@@ -4,46 +4,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Installer nyeste stabile NodeJs \n",
+    "### 1. Installer nyeste stabile NodeJs \n",
     "    - skriv inn i terminal:\n",
     "```\n",
     "conda install -c conda-forge nodejs \n",
     "```\n",
     "\n",
     "\n",
-    "2. Oppdater alt i conda\n",
+    "### 2. Oppdater alt i conda\n",
     "     - skriv inn i terminal:\n",
     "```\n",
     "conda update --all\n",
     "```\n",
     "\n",
-    "3. Aktiver Extension Manager\n",
+    "### 3. Aktiver Extension Manager\n",
     "\n",
     "<img src='settings.png' width='200px' style='float:left'>\n",
     "<img src='extention_manager.png' width='600px'>\n",
     ".\n",
     "\n",
-    "5. Søk på plotly i Extention Manager\n",
+    "### 5. Søk på plotly i Extention Manager\n",
     "\n",
     "<img src='plotly.png' width='200px' >\n",
     "\n",
     "\n",
     "Installer plotly-extension\n",
     "\n",
-    "6. Legg til plotly \n",
+    "### 6. Legg til plotly \n",
     "\n",
     "<img src='anaconda.png'>\n",
     "\n",
     "\n",
-    "7. Installer Plotly Widget \n",
+    "### 7. Installer Plotly Widget \n",
     "    - skriv inn i terminal:\n",
+    "    \n",
     "    ```\n",
     "    jupyter labextension install plotlywidget\n",
     "    ```\n",
     "\n",
     "\n",
-    "8. De som ønsker Material Theme:\n",
+    "### 8. De som ønsker Material Theme:\n",
     "    - skriv inn i terminal:\n",
+    "    \n",
     "    ```\n",
     "    jupyter labextension install @oriolmirosa/jupyterlab_materialdarker\n",
     "    ``\n",
