--- a/01_Undervisningsnotater/5.-Lister-og-plotting/plotly.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/plotly.ipynb
@@ -24,6 +24,8 @@
     "\n",
     "### 3. Aktiver Extension Manager\n",
     "\n",
+    "Restart Jupyterlab først.\n",
+    "\n",
     "<img src='settings.png' width='200px' style='float:left'>\n",
     "<img src='extention_manager.png' width='600px'>\n",
     ".\n",
@@ -34,15 +36,19 @@
     "\n",
     "Installer plotly-extension\n",
     "\n",
+    "### 6. Søk på jupyterlab-manager i Extention Manager\n",
     "\n",
-    "### \n",
+    "<img src='plotly.png' width='200px' >\n",
     "\n",
-    "### 6. Legg til plotly \n",
+    "Installer jupyterlab-manager\n",
+    "\n",
+    "\n",
+    "### 7. Legg til plotly \n",
     "\n",
     "<img src='anaconda.png'>\n",
     "\n",
     "\n",
-    "### 7. Installer Plotly Widget \n",
+    "### 8. Installer Plotly Widget \n",
     "    - skriv inn i terminal:\n",
     "    \n",
     "```\n",
@@ -50,7 +56,7 @@
     "```\n",
     "\n",
     "\n",
-    "### 8. De som ønsker Material Theme:\n",
+    "### 9. De som ønsker Material Theme:\n",
     "    - skriv inn i terminal:\n",
     "    \n",
     "```\n",
@@ -69,13 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "762dfd73890d49cfa9700819dc34ef58",
+       "model_id": "0477be2bfce34f9bbb938d7309988f92",
        "version_major": 2,
        "version_minor": 0
       },
@@ -88,6 +94,7 @@
     }
    ],
    "source": [
+    "# glider skal vi bruke senere\n",
     "import ipywidgets\n",
     "ipywidgets.IntSlider()"
    ]
@@ -155,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,13 +210,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9db1b1d94ebe426db7f6973608e2411f",
+       "model_id": "77cbb44f355a4d0b8a4f0801e0f45669",
        "version_major": 2,
        "version_minor": 0
       },
@@ -229,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
