--- a/01_Undervisningsnotater/5.-Lister-og-plotting/plotly.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/plotly.ipynb
@@ -41,7 +41,9 @@
     "Installer jupyterlab-manager\n",
     "\n",
     "\n",
+    "Nå skal extensioin manager se slik ut (-Material Theme):\n",
     "\n",
+    "<img src='emf.png' width='200px' >\n",
     "\n",
     "\n",
     "### 7. Legg til plotly \n",
