--- a/01_Undervisningsnotater/5.-Lister-og-plotting/plotly.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/plotly.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,13 +214,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bde90e995dc3489eb5099434cbd4e4da",
+       "model_id": "7581dcc152f84ef1a4d21d30bf96a272",
        "version_major": 2,
        "version_minor": 0
       },
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,19 +301,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig2.layout.paper_bgcolor='#212121'\n",
-    "fig2.layout.plot_bgcolor='#212121'\n",
-    "fig2.layout.titlefont.color='#ff7f0e'\n",
-    "fig2.layout.xaxis.titlefont.color = 'lightgrey'\n",
-    "fig2.layout.xaxis.tickfont.color = 'lightgrey'\n",
-    "fig2.layout.yaxis.titlefont.color = 'lightgrey'\n",
-    "fig2.layout.yaxis.tickfont.color = 'lightgrey'\n",
-    "fig2.layout.legend.font.color = 'lightgrey'"
+    "def make_dark_plot(fig):\n",
+    "    fig.layout.paper_bgcolor='#212121'\n",
+    "    fig.layout.plot_bgcolor='#212121'\n",
+    "    fig.layout.titlefont.color='#ff7f0e'\n",
+    "    fig.layout.xaxis.titlefont.color = 'lightgrey'\n",
+    "    fig.layout.xaxis.tickfont.color = 'lightgrey'\n",
+    "    fig.layout.yaxis.titlefont.color = 'lightgrey'\n",
+    "    fig.layout.yaxis.tickfont.color = 'lightgrey'\n",
+    "    fig.layout.legend.font.color = 'lightgrey'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "make_dark_plot(fig2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
