--- a/01_Undervisningsnotater/5.-Lister-og-plotting/plotly.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/plotly.ipynb
@@ -4,6 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Plotly\n",
+    "<img src='skjerm.png'>\n",
+    "\n",
     "### 1. Installer nyeste stabile NodeJs \n",
     "   - skriv inn i terminal:\n",
     "```\n",
@@ -65,9 +68,7 @@
     "jupyter labextension install @oriolmirosa/jupyterlab_materialdarker\n",
     "```\n",
     "\n",
-    "\n",
-    "\n",
-    "<img src='theme.png' width='200px'>\n"
+    "<img src='theme.png' width='200px'>"
    ]
   },
   {
