--- a/01_Undervisningsnotater/5.-Lister-og-plotting/plotly.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/plotly.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plotly\n",
+    "# Plotly og bqplot\n",
     "<img src='skjerm.png'>\n",
     "\n",
     "### 1. Installer nyeste stabile NodeJs \n",
@@ -62,7 +62,20 @@
     "```\n",
     "\n",
     "\n",
-    "### 9. De som ønsker Material Theme:\n",
+    "### 9. bqplot\n",
+    "   - skriv inn i terminal:  \n",
+    "```\n",
+    "conda install -c conda-forge bqplot\n",
+    "```\n",
+    "og\n",
+    "```\n",
+    "jupyter labextension install bqplot\n",
+    "```\n",
+    "\n",
+    "<a href='https://bqplot.readthedocs.io/en/latest/'>bqplot-dokumentasjon</a>\n",
+    "\n",
+    "\n",
+    "### 10. De som ønsker Material Theme:\n",
     "   - skriv inn i terminal:\n",
     "```\n",
     "jupyter labextension install @oriolmirosa/jupyterlab_materialdarker\n",
@@ -80,13 +93,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc8871a37d5f4a39973e74b74aa605a5",
+       "model_id": "29018500f7f2439187b0a2f5f50a76b7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,13 +129,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b42f0aa055894449ab73398c84581523",
+       "model_id": "90733cdce95d4f2bb8dadc1b0d37cf8b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -143,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,13 +228,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7581dcc152f84ef1a4d21d30bf96a272",
+       "model_id": "8bf0fbb32c9d461b9bc15b36710c8ef1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -241,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
