--- a/01_Undervisningsnotater/5.-Lister-og-plotting/bqplot.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/bqplot.ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# bqplot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Eksempel 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,23 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = np.arange(1,8)\n",
-    "y = np.array([2, 1, 4, 3,10,20,3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a5243e6a10348428f63e2263eba5478",
+       "model_id": "4e51c1e6fe75435582b3564a869b776c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -48,14 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = np.arange(1,8)\n",
+    "y = np.array([2, 1, 4, 3,10,20,3])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,24 +89,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.xlabel(label='x')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Eksempel 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import bqplot as bq\n",
+    "from IPython.display import display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'str' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-80-e36b5006c1cd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'x'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'str' object is not callable"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8cfe32f5987b488cb1a315f71a182093",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(animation_duration=2000, axes=[Axis(label='x', scale=LinearScale()), Axis(label='y', orientation='verti…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "plt.label"
+    "xs = bq.LinearScale()\n",
+    "ys = bq.LinearScale()\n",
+    "x = np.arange(100)\n",
+    "y = np.cumsum(np.random.randn(2, 100), axis=1) #two random walks\n",
+    "\n",
+    "line = bq.Lines(x=x, y=y, scales={'x': xs, 'y': ys})\n",
+    "\n",
+    "xax = bq.Axis(\n",
+    "    scale=xs, \n",
+    "    label='x', \n",
+    "    grid_lines='solid')\n",
+    "\n",
+    "yax = bq.Axis(\n",
+    "    scale=ys, \n",
+    "    orientation='vertical', \n",
+    "    tick_format='0.2f', \n",
+    "    label='y', \n",
+    "    grid_lines='solid')\n",
+    "\n",
+    "fig = bq.Figure(marks=[line], axes=[xax, yax], animation_duration=2000)\n",
+    "fig"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#update data of the line mark\n",
+    "line.y = np.cumsum(np.random.randn(2, 100), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
