--- a/01_Undervisningsnotater/5.-Lister-og-plotting/bqplot.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/bqplot.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e51c1e6fe75435582b3564a869b776c",
+       "model_id": "357666bf8efe4d2181a8d3b8a7e5c269",
        "version_major": 2,
        "version_minor": 0
       },
@@ -52,17 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = np.arange(1,8)\n",
-    "y = np.array([2, 1, 4, 3,10,20,3])"
+    "y = np.array([2, 1, 4, 3, 10, 20, 3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,29 +105,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import bqplot as bq\n",
-    "from IPython.display import display"
+    "import bqplot as bq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8cfe32f5987b488cb1a315f71a182093",
+       "model_id": "7c5ba4deb20c4b96bda7d6a99f9a82f1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Figure(animation_duration=2000, axes=[Axis(label='x', scale=LinearScale()), Axis(label='y', orientation='verti…"
+       "Figure(animation_duration=1000, axes=[Axis(label='x', scale=LinearScale()), Axis(label='y', orientation='verti…"
       ]
      },
      "metadata": {},
@@ -154,13 +153,13 @@
     "    label='y', \n",
     "    grid_lines='solid')\n",
     "\n",
-    "fig = bq.Figure(marks=[line], axes=[xax, yax], animation_duration=2000)\n",
+    "fig = bq.Figure(marks=[line], axes=[xax, yax], animation_duration=1000)\n",
     "fig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
