--- a/01_Undervisningsnotater/5.-Lister-og-plotting/5.1.2_Matriser_Vector_Array.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/5.1.2_Matriser_Vector_Array.ipynb
@@ -27,7 +27,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": false
+   },
    "source": [
     "### Lage Array med Numpy"
    ]
@@ -204,6 +206,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc-hr-collapsed": false
+   },
+   "source": [
+    "#### Operasjoner\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -244,8 +256,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc-hr-collapsed": false
+   },
+   "source": [
+    "**$+$ $-$ $\\cdot$ $/$**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.41421356, 9.64575131, 4.73205081])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a+b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.58578644, 4.35424869, 1.26794919])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a-b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -254,13 +315,107 @@
        "array([ 2.82842712, 18.52025918,  5.19615242])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a*b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.41421356, 2.64575131, 1.73205081])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a/b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Flere operasjoner**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4, 49,  9])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.41421356, 2.64575131, 1.73205081])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.90929743, 0.6569866 , 0.14112001])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sin(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Prikkprodukt**"
    ]
   },
   {
@@ -375,27 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2 7 3]\n",
-      "[2 7 3]\n",
-      "[2 7 3]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for x in a.flat:\n",
-    "    print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +539,7 @@
        "array([2, 7, 3])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,6 +586,26 @@
    ],
    "source": [
     "len(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "7\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in a:\n",
+    "    print(x)"
    ]
   },
   {
